<resources>
    <string name="app_name">Termix</string>
    <string name="content_description_start_icon">VoiceSearch</string>
    <string name="content_description_end_icon">Settings</string>
    <string name="search_hint">جستجو کن</string>
    <string name="sign_in_button">نام‌نویسی</string>
    <string name="login_button">درون‌شد</string>
    <string name="application_logo_description">application logo</string>
    <string name="password_hint">گذرواژه</string>
    <string name="email_hint">رایانامه</string>
    <string name="terms_of_service_consent">من با شرایط استفاده از برنامه موافقم.</string>
    <string name="confirm_password_hint">تکرار گذرواژه</string>
    <string name="login">درون‌شد</string>
    <string name="sign_up">نام‌نویسی</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notification_situation">روشن‌بودن آگهی</string>
    <string name="notifications">آگهی</string>
    <string name="change_email">دگرش رایانامه</string>
    <string name="change_password">دگرش گذرواژه</string>
    <string name="logout">برون‌رفت از حساب</string>
    <string name="saturday">شنبه</string>
    <string name="sunday">یک‌شنبه</string>
    <string name="monday">دوشنبه</string>
    <string name="tuesday">سه‌شنبه</string>
    <string name="wednesday">چهارشنبه</string>
    <string name="thursday">پنج‌شنبه</string>
    <string name="friday">جمعه</string>
    <string name="departments">دانشکده ها</string>
    <string name="course_title">برنامه سازی پیشرفته</string>
    <string name="course_instructor">علی چکاه</string>
    <string name="course_unit">3</string>
    <string name="course_identifier">40153, 4</string>
    <string name="course_time">یک شنبه و سه شنبه 7:30 الی 9:00</string>
    <string name="recycle_bin">حذف</string>
    <string name="sign_out">برون شد</string>
    <string name="settings">تنظیمات</string>
    <string name="save">ذخیره</string>
    <string name="cancel">لغو</string>
    <string name="in_progress">در جریان</string>
    <string name="password_forgot">فراموشی گذرواژه</string>
    <string name="your_next_courses">کلاس های بعدی شما:</string>
    <string name="forget_password_request_email_prompt">لطفا رایانامه خود را وارد کنید که پیوند بازنشانی گذرواژه برای شما فرستاده شود.</string>
    <string name="set_new_password_prompt">لطفا گذرواژه جدید خود را وارد کنید.</string>
    <string name="send_email_button">بفرست</string>
    <string name="signup_message">ایمیل خود را تأیید کرده و سپس از صفحه درون‌شد، وارد برنامه شوید.</string>
    <string name="forget_message">ایمیل بازیابی گذرواژه برایتان فرستاده شد.</string>
    <string name="searchResultTitle">برنامه سازی موبایل</string>
    <string name="searchResultInstructor">امید جعفری نژاد</string>
    <string name="searchResultClassTime">شنبه و دوشنبه 16:30 الی 18:00</string>
    <string name="searchResultIdentifier">40429, 1</string>
    <string name="searchResultExamTime">1400/04/12 9:00</string>
    <string name="searchResultUnit">3</string>
    <string name="searchResultCapacity">80</string>
    <string name="exam">آزمون: </string>
    <string name="choose_department">گزینش دانشکده</string>
    <string name="civil">مهندسی عمران</string>
    <string name="computer">مهندسی کامپیوتر</string>
    <string name="energy">مهندسی انرژی</string>
    <string name="economics">مدیریت و اقتصاد</string>
    <string name="industry">مهندسی صنایع</string>
    <string name="math">علوم ریاضی</string>
    <string name="chemistry">شیمی</string>
    <string name="physics">فیزیک</string>
    <string name="electric">مهندسی برق</string>
    <string name="oil">مهندسی شیمی و نفت</string>
    <string name="material">مهندسی و علم مواد</string>
    <string name="mechanics">مهندسی مکانیک</string>
    <string name="aerospace">مهندسی هوافضا</string>
    <string name="choose_your_department">دانشکده خود را برگزینید</string>
    <string name="delete">حذف</string>
    <string name="undo">بازگشت</string>
    <string name="number_picker_title">چند دقیقه زودتر از کلاس؟</string>
    <string name="end_alarm">بسه!</string>
    <string name="signup_verify_waiting_prompt">کمی درنگ کنید تا حساب شما ایجاد شود.</string>
    <string name="channel_name">alarmChannel</string>
    <string name="channel_description">reminder</string>
    <string name="no_class_time">بدون زمان کلاس</string>
    <string name="server_url">ce419d0e99e3.ngrok.io</string>
    <string name="retry">اینترنت در دسترس نیست. برای بررسی مجدد صفحه را لمس کنید.</string>
</resources>