<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layoutDirection="rtl"
        android:padding="8dp"
        android:textDirection="rtl"
        app:endIconContentDescription="@string/content_description_end_icon"
        app:endIconDrawable="@drawable/ic_baseline_settings_24dp"
        app:endIconMode="custom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconContentDescription="@string/content_description_start_icon"
        app:startIconDrawable="@drawable/ic_baseline_mic_24">

        <AutoCompleteTextView
            android:id="@+id/search_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search_hint"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:textDirection="rtl" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/text_input_layout">

        <TextView
            android:id="@+id/text_saturday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/saturday" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_saturday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/text_sunday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sunday" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_sunday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/text_monday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/monday" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_monday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/text_tuesday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tuesday" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_tuesday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/text_wednesday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wednesday" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_wednesday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/text_thursday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/thursday" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_thursday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>