<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/course_title"
            android:textDirection="rtl"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/instructor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/course_instructor"
            android:textDirection="rtl"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <TextView
            android:id="@+id/unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/course_unit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/identifier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/course_identifier"
            app:layout_constraintBottom_toBottomOf="@+id/unit"
            app:layout_constraintStart_toEndOf="@+id/unit"
            app:layout_constraintTop_toTopOf="@+id/unit" />

        <TextView
            android:id="@+id/times"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/course_time"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/instructor"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>