<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/departments_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/yekan"
        android:gravity="center"
        android:paddingVertical="4dp"
        android:text="@string/choose_your_department"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/civil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_popup_textview"
        android:clickable="true"
        android:fontFamily="@font/yekan"
        android:gravity="center"
        android:paddingVertical="4dp"
        android:text="@string/civil"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/industry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_popup_textview"
        android:clickable="true"
        android:fontFamily="@font/yekan"
        android:gravity="center"
        android:paddingVertical="4dp"
        android:text="@string/industry"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/math"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_popup_textview"
        android:clickable="true"
        android:fontFamily="@font/yekan"
        android:gravity="center"
        android:paddingVertical="4dp"
        android:text="@string/math"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/chemistry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_popup_textview"
        android:clickable="true"
        android:fontFamily="@font/yekan"
        android:gravity="center"
        android:paddingVertical="4dp"
        android:text="@string/chemistry"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/physics"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_popup_textview"
        android:clickable="true"
        android:fontFamily="@font/yekan"
        android:gravity="center"
        android:paddingVertical="4dp"
        android:text="@string/physics"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/electricity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_popup_textview"
        android:clickable="true"
        android:fontFamily="@font/yekan"
        android:gravity="center"
        android:paddingVertical="4dp"
        android:text="@string/electric"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/oil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_popup_textview"
        android:clickable="true"
        android:fontFamily="@font/yekan"
        android:gravity="center"
        android:paddingVertical="4dp"
        android:text="@string/oil"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/material"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_popup_textview"
        android:clickable="true"
        android:fontFamily="@font/yekan"
        android:gravity="center"
        android:paddingVertical="4dp"
        android:text="@string/material"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/mechanics"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_popup_textview"
        android:clickable="true"
        android:fontFamily="@font/yekan"
        android:gravity="center"
        android:paddingVertical="4dp"
        android:text="@string/mechanics"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/computer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_popup_textview"
        android:clickable="true"
        android:fontFamily="@font/yekan"
        android:gravity="center"
        android:paddingVertical="4dp"
        android:text="@string/computer"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/economics"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_popup_textview"
        android:clickable="true"
        android:fontFamily="@font/yekan"
        android:gravity="center"
        android:paddingVertical="4dp"
        android:text="@string/economics"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/aerospace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_popup_textview"
        android:clickable="true"
        android:fontFamily="@font/yekan"
        android:gravity="center"
        android:paddingVertical="4dp"
        android:text="@string/aerospace"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/energy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_popup_textview"
        android:clickable="true"
        android:fontFamily="@font/yekan"
        android:gravity="center"
        android:paddingVertical="4dp"
        android:text="@string/energy"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</LinearLayout>