<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_course_frame">

    <TextView
        android:id="@+id/course_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/yekan"
        android:padding="16dp"
        android:text="@string/course_title"
        android:textColor="@color/white"
        android:textDirection="rtl"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/course_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/yekan"
        android:padding="16dp"
        android:text="@string/course_time"
        android:textColor="@color/white"
        android:textDirection="rtl"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/course_name" />

    <TextView
        android:id="@+id/course_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/yekan"
        android:padding="16dp"
        android:text="@string/course_identifier"
        android:textColor="@color/white"
        android:textDirection="rtl"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/course_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/yekan"
        android:padding="16dp"
        android:text="@string/course_identifier"
        android:textColor="@color/white"
        android:textDirection="rtl"
        android:textSize="16sp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/course_id" />

    <TextView
        android:id="@+id/course_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/yekan"
        android:padding="16dp"
        android:text="@string/course_unit"
        android:textColor="@color/white"
        android:textDirection="rtl"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/course_group" />

    <TextView
        android:id="@+id/course_instructor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/yekan"
        android:padding="16dp"
        android:text="@string/course_instructor"
        android:textColor="@color/white"
        android:textDirection="rtl"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/course_group" />

    <TextView
        android:id="@+id/course_department"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/departments"
        android:fontFamily="@font/yekan"
        android:padding="16dp"
        android:textColor="@color/white"
        android:textDirection="rtl"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/course_instructor" />

    <TextView
        android:id="@+id/course_capacity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/yekan"
        android:padding="16dp"
        android:text="@string/course_unit"
        android:textColor="@color/white"
        android:textDirection="rtl"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/course_unit" />

    <TextView
        android:id="@+id/course_exam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/yekan"
        android:padding="16dp"
        android:text="@string/course_time"
        android:textColor="@color/white"
        android:textDirection="rtl"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/course_department" />

</androidx.constraintlayout.widget.ConstraintLayout>