<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/forget_password_layout"
    android:background="@drawable/gradient_animation"
    tools:context=".ForgetPasswordRequestEmailActivity">


    <LinearLayout
        android:background="@drawable/background_forget_password_layout"
        android:layout_width="match_parent"
        android:layout_margin="16dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/yekan"
            android:text="@string/forget_password_request_email_prompt"
            android:textSize="18sp" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_new"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="student@sharif.edu"
                android:fontFamily="@font/yekan"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:textDirection="rtl" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/request_send_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/yekan"
            android:text="@string/send_email_button" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>